force-app/main/default/objects/Compensation_Assignment__c/Compensation_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assigns a user to a compensation plan, with optional BU and role context.</description>
    <label>Compensation Assignment</label>
    <nameField>
        <label>Compensation Assignment Name</label>
        <type>AutoNumber</type>
        <displayFormat>CA-{00000000}</displayFormat>
    </nameField>
    <pluralLabel>Compensation Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>