force-app/main/default/objects/Compensation_Assignment__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Auto-derived Business Unit from the Business Unit Affiliation.</description>
    <label>Business Unit</label>
    <formula>Business_Unit_Affiliation__r.Business_Unit__c</formula>
    <type>Text</type>
</CustomField>