force-app/main/default/objects/Compensation_Assignment__c/fields/Business_Unit_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Affiliation__c</fullName>
    <label>Business Unit Affiliation</label>
    <referenceTo>Business_Unit_Affiliation__c</referenceTo>
    <relationshipLabel>Compensation Assignments</relationshipLabel>
    <relationshipName>BU_Affiliation_Compensation_Assignments</relationshipName>
    <type>MasterDetail</type>
</CustomField>