force-app/main/default/objects/Compensation_Assignment__c/fields/Compensation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Plan__c</fullName>
    <description>Parent compensation plan.</description>
    <label>Compensation Plan</label>
    <referenceTo>Compensation_Plan__c</referenceTo>
    <relationshipLabel>Compensation Plans</relationshipLabel>
    <relationshipName>Comp_Plan_Compensation_Assignments</relationshipName>
    <type>MasterDetail</type>
</CustomField>