force-app/main/default/objects/Compensation_Assignment__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>Indicates whether this is the primary plan assignment for this user in this context.</description>
    <label>Primary</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>