force-app/main/default/objects/Compensation_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Auto-derived User from the Business Unit Affiliation.</description>
    <label>User</label>
    <type>Text</type>
    <formula>Business_Unit_Affiliation__r.User__c</formula>
</CustomField>